intel/bench_214_new/extr_.labenginecoderenderergl2tr_extramath.c_Mat4Multiply_with_main/log.txt
bench_214_new/extr_.labenginecoderenderergl2tr_extramath.c_Mat4Multiply_with_main/extr_.labenginecoderenderergl2tr_extramath.c_Mat4Multiply_with_main.c:40:16: error: default initialization of an object of const type 'const mat4_t' (aka 'int *const')
  const mat4_t in1;
               ^
                   = nullptr
bench_214_new/extr_.labenginecoderenderergl2tr_extramath.c_Mat4Multiply_with_main/extr_.labenginecoderenderergl2tr_extramath.c_Mat4Multiply_with_main.c:41:16: error: default initialization of an object of const type 'const mat4_t' (aka 'int *const')
  const mat4_t in2;
               ^
                   = nullptr
2 errors generated.
HLS FPGA Parse FAILED.
